# facefusion

./: .gitignore  Dockerfile  MANIFEST.in  PIPX_INSTALL.md  README.md  docker-compose.yml  facefusion.ini  pyproject.toml
facefusion/: __init__.py  args.py  content_analyser.py  core.py  program.py  types.py  wording.py
facefusion/processors/modules/: face_swapper.py
facefusion/uis/: overrides.py
